# agimeta_edna_mvp_2025-11

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api-gateway/: Dockerfile  pyproject.toml  setup.py
apps/api-gateway/src/api_gateway/: __init__.py  main.py
apps/cockpit/: .env.local.example  README.md  next.config.js  package-lock.json  package.json
apps/cockpit/app/: layout.tsx  page.tsx
apps/cockpit/app/databases/: page.tsx
apps/cockpit/app/objects/: page.tsx
apps/cockpit/app/objects/[id]/: page.tsx
apps/cockpit/app/scans/: page.tsx
apps/identity/: Dockerfile  pyproject.toml  setup.py
apps/identity-worker/: Dockerfile  pyproject.toml  setup.py
apps/identity-worker/src/identity_worker/: __init__.py  main.py  worker.py
apps/identity/src/identity/: __init__.py  main.py  matcher.py
apps/scanner/: Dockerfile  pyproject.toml  setup.py
apps/scanner/src/scanner/: __init__.py  main.py  scanner.py
apps/semantic/: Dockerfile  pyproject.toml  setup.py
apps/semantic/src/semantic/: __init__.py  main.py
docs/: architecture.md  data-model.md  mvp-scope.md  roadmap.md
docs/adr/: 0001-datenmodell-grundstruktur.md
infra/migrations/: 000_migration_tracking.sql  001_init_schema.sql  002_object_candidates_staging.sql  003_demo_source_table.sql  004_terms_and_kpis.sql  005_source_databases.sql  006_mvp_customer_hub.sql
scripts/: run_migrations.py  seed_demo_data.py  setup-env.sh
tests/: __init__.py  test_identity.py  test_models.py
